  the message. This will reduce CPU usage, especially at hubs (#0001022).
- Will now strip/block color codes in quits if any channel the user is in has mode +S/+c.
- Temporarely added trace code for hunting down negative operator counts (#0001155).
- Made it so that with +M and user not +r and not voice/halfop/ops/etc the part message isn't
  shown, just like with +m.
- Added warn option to deny channel, this will send a notice to the eyes snomask when a user
  attempts to join. Suggested by Joolz (#0000992).
- Added clientsonly/serversonly/ssl/java flags to /stats P (#0000992).
- Added official-channels block. These channels are listed in /list even if they have 0 users.
- Fixed a crashbug introduced by +mu fixes 3 days ago (#0001237).
- Fixed a typo where /knock would say the channel is +I if +V is set, reported by Certus
- Improved SSL error msg sent to junk snomask.
- Fixed Q:lined nickname msgs during linking and a debug fix.
- Fixed a SVSMOTD crashbug (removing of motd).
- Fix-for-fix-for-+mu-fix (it was still crashing)... don't ask.
- Minor +f code tweaks.
- Added checks for ipv4 listen lines on ipv6 compile.
- Finished some of the extcmode code (memleaks).
- Fixed a problem in the new win32 resolver code
- Added HOOKTYPE_UNKUSER_QUIT (disconnects of unregistered clients).
- Fixed a Linux PPC problem (#0001242)
- Made the win32 version use libtre for regex rather than GNU regex
  libtre is smaller, faster, and more feature rich.
- Fixed some issues regarding unsetting of -R/-M when server set that mode due to a flood (+f),
  it would set the mode back immediately after next msg/join, counters are now reset.
- Updated documentation
- Added set::default-bantime. It allows you to set the default time for a gline/kline/gzline/
  shun/etc when the time is not not specified (like with /gline *@*.stupid.net).
- Added HOOKTYPE_LOCAL_PASS and HOOKTYPE_REMOTE_CONNECT
- Added HOOKTYPE_REMOTE_QUIT
- Added beta18 release notes (might be changed)